--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version : '34'
 services : 
   centos-httpd : 
    build : 
-    context : './dockerfile-http'
+    context : './dockerfile-httpd'
    image : 'centos-http:1.0'
    ports :
      - 80:80 
